--- a/index.html
+++ b/index.html
@@ -20,15 +20,36 @@
             <ul><li>Home</li></ul>
             <ul><li>Sobre</li></ul>
             <ul><li>Skills</li></ul>
-            <ul><li>Portifolio</li></ul>
-            <ul><li>Contato</li></ul>
         </nav>
+        <section class="hamburguer" onclick="Abrir_Menu_Mobile()">
+            <div class="line-ham"></div>
+            <div class="line-ham"></div>
+            <div class="line-ham"></div>
+        </section>
         <button class="button-cnt">Contato</button>
     </header>
+    <section class="mobile-nav">
+            <button class="buttom-mobile" onclick="Fechar_Menu_Mobile()" >X</button>
+            <ul><li>Home</li></ul>
+            <ul><li>Sobre</li></ul>
+            <ul><li>Skills</li></ul>
+            <ul><li>Contato</li></ul>
+            <button class="button-cnt">Contato</button>
+    </section>
+    <main>
+        <section class="learn">
+            <h3>Oi eu sou <span class="destaque">Cauê Falcão</span>👋</h3>
+            <h1>Front-End Estágio</h1>
+            <p>Crio Sites com codigo limpo e responsavel</p>
+            <img class="img-logo-perfil" src="./assets/img/foto_perfil.jpg" alt="minha_foto">
+        </section>
+    </main>
     <!--Bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <!--js-->
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
