--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <section class="learn">
             <h3>Oi eu sou <span class="destaque">Cauê Falcão</span>👋</h3>
-            <h1>Front-End Estágio</h1>
+            <h1>Estágio em Front-End</h1>
             <p>Crio Sites com codigo limpo e responsavel</p>
             <img class="img-logo-perfil" src="./assets/img/foto_perfil.jpg" alt="minha_foto">
         </section>
