--- a/index.html
+++ b/index.html
@@ -40,8 +40,30 @@
         <section class="learn">
             <h3>Oi eu sou <span class="destaque">Cauê Falcão</span>👋</h3>
             <h1>Estágio em Front-End</h1>
-            <p>Crio Sites com codigo limpo e responsavel</p>
+            <p>Crio sites com código limpo e responsável</p>
             <img class="img-logo-perfil" src="./assets/img/foto_perfil.jpg" alt="minha_foto">
+        </section>
+        <section class="info">
+            <section class="div-info">
+                <section class="img-info">
+                    <img src="./assets/img/years.png">
+                </section>
+                <section class="numeros-info">
+                    <h3>1/5</h3>
+                    <p>Anos de Experiêcia</p>
+                </section>
+                <section></section>
+            </section>
+            <section class="div-info">
+                <section class="img-info">
+                    <img src="./assets/img/projects.png">
+                </section>
+                <section class="numeros-info">
+                    <h3>31</h3>
+                    <p>Projetos Completos</p>
+                </section>
+                <section></section>
+            </section>
         </section>
     </main>
     <!--Bootstrap js-->
