--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
     <header>
         <img src="./assets/img/Screenshot_1.png" class="img-logo" alt="logo">
         <nav class="nav-desktop">
-            <ul><li>Home</li></ul>
-            <ul><li>Sobre</li></ul>
-            <ul><li>Skills</li></ul>
+            <ul>
+                <li>Home</li>
+            </ul>
+            <ul>
+                <li>Sobre</li>
+            </ul>
+            <ul>
+                <li>Skills</li>
+            </ul>
         </nav>
         <section class="hamburguer" onclick="Abrir_Menu_Mobile()">
             <div class="line-ham"></div>
@@ -29,12 +35,20 @@
         <button class="button-cnt">Contato</button>
     </header>
     <section class="mobile-nav">
-            <button class="buttom-mobile" onclick="Fechar_Menu_Mobile()" >X</button>
-            <ul><li>Home</li></ul>
-            <ul><li>Sobre</li></ul>
-            <ul><li>Skills</li></ul>
-            <ul><li>Contato</li></ul>
-            <button class="button-cnt">Contato</button>
+        <button class="buttom-mobile" onclick="Fechar_Menu_Mobile()">X</button>
+        <ul>
+            <li>Home</li>
+        </ul>
+        <ul>
+            <li>Sobre</li>
+        </ul>
+        <ul>
+            <li>Skills</li>
+        </ul>
+        <ul>
+            <li>Contato</li>
+        </ul>
+        <button class="button-cnt">Contato</button>
     </section>
     <main>
         <section class="learn">
@@ -67,13 +81,32 @@
         </section>
         <section class="sobre-min">
             <section class="fix">
-                <h1>Quem Sou Eu?</h1>
+                <h1 class="titulo-padrao">Quem Sou Eu?</h1>
             </section>
             <section class="sobre-min-div">
                 <p id="injetar_texto"></p>
                 <button class="button-cnt">Contato</button>
             </section>
 
+        </section>
+        <section class="habilidades">
+            <section class="fix" style="margin-top: 10rem;">
+                <h1 class="titulo-padrao">Minhas Habilidades</h1>
+            </section>
+            <section class="row">
+                <section class="col-md-6 habilidades-info">
+                    <h1>Quais sao as minhas habilidades?</h1>
+                    <p>Eu aprendi minhas habilidades em sua maioria com muita prática
+                        e projetos reais, também cursos e formações completos pela W3school
+                        e a formação em Front end de 130hrs da Alura👋                        
+                    </p>
+                </section>
+                <section class="col-md-6">
+                    <section class="container-inject">
+
+                    </section>
+                </section>
+            </section>
         </section>
     </main>
     <!--Bootstrap js-->
