--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <button class="button-cnt">Contato</button>
     </section>
     <main>
+
         <section class="learn">
             <h3>Oi eu sou <span class="destaque">Cauê Falcão</span>👋</h3>
             <h1>Estágio em Front-End</h1>
@@ -101,9 +102,8 @@
                         e a formação em Front end de 130hrs da Alura👋                        
                     </p>
                 </section>
-                <section class="col-md-6">
+                <section class="col-md-6 d-flex justify-content-md-end">
                     <section class="container-inject">
-
                     </section>
                 </section>
             </section>
