--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <section></section>
             </section>
         </section>
-        <section class="sobre-min">
+        <section class="sobre-min" style="padding-top: 8rem;">
             <section class="fix">
                 <h1 class="titulo-padrao">Quem Sou Eu?</h1>
             </section>
@@ -90,22 +90,83 @@
             </section>
 
         </section>
-        <section class="habilidades">
+        <section class="habilidades" style="padding-top:10rem;padding-bottom: 20rem;">
             <section class="fix" style="margin-top: 10rem;">
                 <h1 class="titulo-padrao">Minhas Habilidades</h1>
             </section>
-            <section class="row">
+            <section class="row mt-5">
                 <section class="col-md-6 habilidades-info">
-                    <h1>Quais sao as minhas habilidades?</h1>
+                    <h1 cla>Quais são as minhas habilidades?</h1>
                     <p>Eu aprendi minhas habilidades em sua maioria com muita prática
                         e projetos reais, também cursos e formações completos pela W3school
                         e a formação em Front end de 130hrs da Alura👋                        
                     </p>
                 </section>
-                <section class="col-md-6 d-flex justify-content-md-end">
+                <section class="col-md-6 d-flex justify-content-md-center">
                     <section class="container-inject">
                     </section>
                 </section>
+            </section>
+        </section>
+        <section class="meus-projetos" style="padding-top: 5rem;">
+            <section class="fix">
+                <h1 class="titulo-padrao">Meus Projetos</h1>
+            </section>
+            <section class="padding-div">
+            <div class="row row-cols-1 row-cols-md-2 g-4 " id="inject-cards">
+                <div class="col">
+                    <div class="card">
+                      <img src="assets/img/hDc_agency.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Agencia Web</h5>
+                        <p class="card-text">
+                            Projeto de uma agencia que cria E-comece , Feito em Html Css e Bootstrap
+                        </p>
+                        <button class="button-pr"><a>Acesse Aqui</a></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img src="assets/img/foneX.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">FoneX</h5>
+                        <p class="card-text">
+                            Site estatico de uma pagina de e-comerce mais especificamente
+                            de um fone feito em Html css Bootstrap e Javascript
+                        </p>
+                        <button class="button-pr"><a>Acesse Aqui</a></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img src="assets/img/Codar.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Codar</h5>
+                        <p class="card-text">
+                            Projeto de lading pafe feito em Html
+                            , Css , Javascript e Bootstrap
+                        </p>
+                        <button class="button-pr"><a>Acesse Aqui</a></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img src="assets/img/cadp.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">CADP</h5>
+                        <p class="card-text">
+                            Projeto de trabalho da escola explicando oque foi a semana da
+                            arte moderna Feito em Html , Css e Javascript
+                        </p>
+                        <button class="button-pr"><a>Acesse Aqui</a></button>
+                      </div>
+                    </div>
+                  </div>
+                
+              </div>
             </section>
         </section>
     </main>
